<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yesterday"
        android:layout_gravity="center"
        />
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fail_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/failure_bright"
            android:tooltipText="@string/failure_regular_label"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_close"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fast_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fasted_bright"
            android:tooltipText="@string/fasted_regular_label"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_fast"

            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/success_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/success_bright"
            android:tooltipText="@string/success_regular_label"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_smile"
            />
    </LinearLayout>
</LinearLayout>


