<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Su"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Mo"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Tu"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Wd"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Tr"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Fr"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Sa"
                android:gravity="center"
                />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viz_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            tools:listitem="@layout/rvitem_viz_success"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7"

            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/statsBg"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <include
                    android:id="@+id/last7day_stats"
                    layout="@layout/include_fragment_calendar_last_7_stats"
                    />

                <include
                    android:id="@+id/last30day_stats"
                    layout="@layout/include_fragment_calendar_last_30_stats"
                    />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/showhide_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:tooltipText="@string/show_hide_fab_tooltip"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fail_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close"
            app:layout_constraintRight_toLeftOf="@id/showhide_fab"
            app:layout_constraintTop_toTopOf="@id/showhide_fab"
            android:backgroundTint="@color/failure_bright"
            android:layout_marginRight="@dimen/fab_margin"
            android:visibility="gone"
            android:tooltipText="@string/failure_regular_label"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fast_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_fast"
            app:layout_constraintBottom_toTopOf="@id/showhide_fab"
            app:layout_constraintRight_toLeftOf="@id/showhide_fab"
            android:backgroundTint="@color/fasted_bright"
            android:visibility="gone"
            android:tooltipText="@string/fasted_regular_label"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/success_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_smile"
            android:backgroundTint="@color/success_bright"
            app:layout_constraintBottom_toTopOf="@id/showhide_fab"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            android:tooltipText="@string/success_regular_label"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
